hw6: fixed login + add to fav

--- a/src/components/racket.module.css
+++ b/src/components/racket.module.css
@@ -40,3 +40,10 @@
   font-size: 1.125rem;
   text-align: right;
 }
+
+.bookmark {
+  margin-left: auto;
+  display: flex;
+  align-items: right;
+  justify-content: right;
+}
